--- a/package.json
+++ b/package.json
@@ -11,5 +11,5 @@
     "url": "https://github.com/eldoy/libinit"
   },
   "author": "Vidar Eldøy <vidar@eldoy.com>",
-  "license": "MIT"
+  "license": "WTFPL"
 }
